# reel-movie-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.cursor/: settings.json
.cursor/phases/: README.md  phase-01-scaffold.md  phase-02-minimal-agent.md  phase-03-neo4j-ingestion.md  phase-04-graphrag-agent.md  phase-05-backend-api.md  phase-06-auth-security.md  phase-07-tests.md  phase-08-frontend.md  phase-09-deploy.md  phase-10-docs.md
.cursor/plans/: cursor_rules_and_skills_62395944.plan.md  graphrag_movie_agent_e5678c2b.plan.md  lightrag_core_migration_f4e8155b.plan.md
.cursor/rules/: documentation.mdc  fastapi-backend.mdc  frontend.mdc  langgraph-agent.mdc  project-structure.mdc  python-standards.mdc  security.mdc  supabase-mcp.mdc  testing.mdc
.github/workflows/: agent-evals.yml  ci.yml  restore-lightrag.yml
apps/agents/: Dockerfile  Dockerfile.postgres  langgraph.json  pyproject.toml
apps/agents/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
apps/agents/data/: movies.cypher
apps/agents/evals/: golden_questions.json  test_golden.py
apps/agents/src/agents/: __init__.py  artifacts.py  async_bridge.py  clients.py  graph.py  lightrag_service.py  memory.py  nodes.py  posters.py  projection.py  retrieval.py  safety.py  settings.py  state.py  studio.py  tools.py
apps/agents/src/agents/data/: movie_posters.json
apps/agents/src/agents/prompts/: __init__.py  system.py
apps/agents/src/ingestion/: __init__.py  build_index.py  ingest.py  load_graph.py
apps/agents/tests/: test_artifacts.py  test_async_bridge.py  test_build_index.py  test_build_movies_graph.py  test_evals.py  test_ingest.py  test_load_graph.py  test_nodes.py  test_projection.py  test_prompts.py  test_retrieval.py  test_safety.py  test_settings.py
apps/backend/: Dockerfile  pyproject.toml
apps/backend/src/api/: __init__.py  auth.py  db.py  deps.py  limiter.py  main.py  middleware.py  schemas.py  settings.py
apps/backend/src/api/prompts/: __init__.py  conversation_title.py
apps/backend/src/api/routes/: __init__.py  chat.py  chats.py  graph.py  health.py
apps/backend/src/api/services/: __init__.py  chats.py  streaming.py  titles.py
apps/backend/tests/: conftest.py  test_auth.py  test_chat.py  test_chats.py  test_graph.py  test_health.py  test_limiter.py  test_main.py  test_settings.py  test_titles.py
apps/frontend/: Dockerfile  README.md  next.config.ts  package.json  playwright.config.ts  playwright.prod.config.ts  pnpm-lock.yaml  proxy.ts  tailwind.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  PRODUCTION_READINESS_REVIEW.md  REPO_STRENGTHS.md  SYSTEM_DESIGN_REVIEW.md  SYSTEM_OVERVIEW.md  graphrag-approaches-explained.md
docs/setup/: deployment.md  movie-graph-ingestion.md
infra/aws/: Caddyfile  block-device.json  cloud-init.yml  deploy.sh  docker-compose.prod.yml
prev-review/: 14_QA_SECURITY_REVIEW.md  15_QA_CODE_QUALITY_REVIEW.md  16_QA_DOCUMENTATION_REVIEW.md  MONOREPO_RESTRUCTURE_PLAN.md  REVIEW.md
scripts/: __init__.py  build_movie_posters.py  build_movies_graph.py  smoke_phase6.py  smoke_prod.py
stitch_reel_ai_movie_assistant/sign_in_to_reel/: code.html
(+52 files in other folders)
