[project]
name = "agents"
version = "0.0.0"
description = "LangGraph GraphRAG movie agent."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.2",
  "langgraph-checkpoint-postgres>=2.0",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langsmith>=0.1",
  "neo4j>=5.24",
  "neo4j-graphrag[openai]>=1.0",
  "pydantic>=2",
  "pydantic-settings>=2",
  "python-dotenv>=1",
  "tenacity>=9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/ingestion"]
