[project]
name = "agents"
version = "0.0.0"
description = "LangGraph GraphRAG movie agent."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.2",
  "langgraph-checkpoint-postgres>=2.0",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langsmith>=0.1",
  "lightrag-hku>=1.4",
  "asyncpg>=0.29",
  "httpx>=0.27",
  "numpy>=1.26",
  "openai>=1.40",
  "pydantic>=2",
  "pydantic-settings>=2",
  "python-dotenv>=1",
  "tenacity>=9",
  "psycopg[binary]>=3.2",
  "tiktoken>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/ingestion"]

[tool.hatch.build.targets.wheel.force-include]
"src/agents/data" = "agents/data"
